--- a/module-3/01_Intro_HTML_CSS/lecture-final/site/index.html
+++ b/module-3/01_Intro_HTML_CSS/lecture-final/site/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bits & Bytes Restaurant</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="grid.css">
 </head>
 <body>
     <header>
